      unit of wood and 1 unit of iron to manufacture, then it takes 2
      man-months to produce each one)
   -- Cleaned up the city/town/village renaming code a bit (Thanks to Tom
      Alsen).  Also added a CITY_RENAME_COST, which if not zero is used as
      a multiply against the city level (1 == village, 2==town, 3==city)
      as a cost for renaming the city.
   -- Added more room for monster lairs (each terrain can now host up to
      1 of 6 instead of 1 of 4 different types of lairs).
   -- NEW RULE: A unit cannot steal from or assassinate a unit which it
      it unable to see.  A unit may not GIVE items to a unit it cannot see
      unless that unit's faction sees the giver as friendly.
   -- Added room for one additional coastal and one additional non-coastal
      race in each of the terrain type definitions.
   -- Fixed bug with a reversed sign in road building.
   -- Patch from Tom Alsen (Tzarg) to catch if unit sequence numbers got
      foobar'd and to at least attempt to repair it.   Side effect of this
      is that any orders for the repaired unit get lost, but that is
      unavoidable.  It also warns the GM so that he can look into it and
      hopefully fix it.
   -- Added a 'similar_type' to the TerrainDefs structure so that spells
      (such as wolf-lore) worked correctly with the Ceran types and the
      conquest types enabled.  There are possibly other places where the
      similar_type should be used instead of the direct type.

TODO
----------------
   -- GIVE ALL [ITEM]
   -- GIVE ALL TRADE (to give away all trade goods) (other categories for
      other obvious flags)
   -- GIVE ALL [ITEM] except [NUM]
   -- Improve the item/hex editor
   -- Gamedef to handle various options around combat/weapons/bows for taxing
   -- Gamedefs for various economy options. (far future)
   -- Gamedef for alternate nexus layouts
   -- Give more information when SHOW <item> is done.