@@ -2740,11 +2740,15 @@ have in that region. <p>
 <hr>
 <a name="give"> </a>
 <h4> GIVE [unit] [quantity] [item] </h4>
+<h4> GIVE [unit] ALL [item] </h4>
+<h4> GIVE [unit] ALL [item] EXCEPT [quantity] </h4>
 <h4> GIVE [unit] UNIT </h4>
 
 The first form of the GIVE order gives a quantity of an item to another unit.
-The second form the the GIVE order gives the entire unit to the specified
-unit's faction. <p>
+The second form of the GIVE order will give all of a given item to another
+unit.  The third form will give all of an item except for a specific quantity
+to another unit.  The fourth and final form the the GIVE order gives the
+entire unit to the specified unit's faction. <p>
 
 A unit may only give items, including silver, to a unit which it is able to
 see, unless the faction of the target unit has declared you Friendly or
