@@ -458,6 +458,9 @@ ItemType id[] =
 	{"ice dragon","ice dragons","IDRA",ItemType::CANTGIVE|ItemType::DISABLED,
 	 -1,0,-1,0,-1,0, 250,IT_MONSTER,
 	 50,1,MONSTER_ICEDRAGON,300,300,0,0, -1,0},
+    {"healing potion","healing potions","HPOT",ItemType::DISABLED,
+	 S_HEALING,3,I_HERBS,1,I_MUSHROOM,1,1, IT_ADVANCED,
+	 90,0,0,0,0,0,0,-1,0},
 };
 
 ItemType * ItemDefs = id;
@@ -1010,20 +1013,20 @@ static TerrainType td[] = {
     {"mountain", R_MOUNTAIN, TerrainType::FLYINGMOUNTS,
      400,12,20,2,I_IRON,100,20,
      I_STONE,100,10,I_MITHRIL,25,5,
-     I_ROOTSTONE,25,5,I_ADMANTIUM,25,5,
+     I_ROOTSTONE,25,5,I_ADMANTIUM,15,5,
      I_BARBARIAN,I_HILLDWARF,I_ORC,-1,I_VIKING,I_SEAELF,-1,
      2,I_GBEAR,I_ROC,I_OGRE,
      3, O_LAIR, O_RUIN, O_CAVE, O_CRYPT,O_MAGETOWER,O_GIANTCASTLE},
     {"swamp", R_SWAMP, TerrainType::FLYINGMOUNTS,
      200,11,10,2,I_WOOD,100,10,
      I_FLOATER,25,10,I_HERBS,100,10,
-     -1,0,0,-1,0,0,
+     I_MUSHROOM,10,5,-1,0,0,
      I_TRIBESMAN,I_TRIBALELF,-1,-1,I_VIKING,I_SEAELF,-1,
      2,I_CROCODILE,I_BTHING,I_LMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG, -1, -1 },
     {"jungle", R_JUNGLE, TerrainType::FLYINGMOUNTS,
      200,11,20,2,I_WOOD,100,10,
-     I_HERBS,100,20,-1,0,0,
+     I_HERBS,100,20,I_MUSHROOM,25,5,
      -1,0,0,-1,0,0,
      I_TRIBESMAN,I_TRIBALELF,I_WOODELF,-1,I_SEAELF,-1,-1,
      2,I_ANACONDA,I_KONG,I_WMEN,
@@ -1045,14 +1048,14 @@ static TerrainType td[] = {
     {"cavern", R_CAVERN, TerrainType::FLYINGMOUNTS,
      100,11,10,1,I_IRON,100,20,
      I_STONE,100,20,I_MITHRIL,25,5,
-     I_ROOTSTONE,25,5,I_ADMANTIUM,25,5,
+     I_ROOTSTONE,25,5,I_ADMANTIUM,25,10,
      I_DARKMAN,I_UNDERDWARF,I_ORC,I_GREYELF,-1,-1,-1,
      3,I_RAT,I_DRAGON,I_GOBLIN,
      5, O_LAIR, O_RUIN, O_CAVE, O_GIANTCASTLE, O_ILAIR, O_DARKTOWER },
     {"underforest", R_UFOREST, TerrainType::FLYINGMOUNTS,
      100,11,10,2,I_WOOD,100,10,
      I_STONE,100,10,I_IRON,100,10,
-     -1,0,0,-1,0,0,
+     I_MUSHROOM,20,10,-1,0,0,
      I_DARKMAN,I_UNDERDWARF,I_ORC,I_GREYELF,-1,-1,-1,
      3,I_SPIDER,I_DRAGON,I_TROLL,
      5, O_LAIR, O_RUIN, O_CAVE, O_MAGETOWER, O_ILAIR, O_DARKTOWER},
@@ -1081,14 +1084,14 @@ static TerrainType td[] = {
     {"swamp", R_SWAMP, TerrainType::FLYINGMOUNTS,
      200,11,10,2,I_WOOD,100,10,
      I_FLOATER,25,10,I_HERBS,100,10,
-     -1,0,0,-1,0,0,
+     I_MUSHROOM,10,5,-1,0,0,
      I_TRIBESMAN,I_TRIBALELF,-1,-1,I_VIKING,I_SEAELF,-1,
      2,I_CROCODILE,I_BTHING,I_LMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG,-1,-1 },
     {"mountain", R_MOUNTAIN, TerrainType::FLYINGMOUNTS,
      400,12,20,2,I_IRON,100,20,
      I_STONE,100,10,I_MITHRIL,25,5,
-     I_ROOTSTONE,25,5,I_ADMANTIUM,25,5,
+     I_ROOTSTONE,25,5,I_ADMANTIUM,15,5,
      I_BARBARIAN,I_HILLDWARF,I_ORC,-1,I_VIKING,I_SEAELF,-1,
      2,I_GBEAR,I_ROC,I_OGRE,
      3, O_LAIR, O_RUIN, O_CAVE, O_CRYPT,O_MAGETOWER,O_GIANTCASTLE},
@@ -1173,7 +1176,7 @@ static TerrainType td[] = {
     {"mountain", R_MOUNTAIN, TerrainType::FLYINGMOUNTS,
      500,12,20,2,I_IRON,100,20,
      I_STONE,100,20,I_MITHRIL,25,10,
-     I_ROOTSTONE,25,10,I_ADMANTIUM,25,5,
+     I_ROOTSTONE,25,10,I_ADMANTIUM,15,5,
      I_BARBARIAN,I_HILLDWARF,I_ORC,-1,I_URUK,I_GNOLL,-1,
      4,I_GBEAR,I_ROC,I_OGRE,
      6, O_LAIR, O_RUIN, O_CAVE, O_CRYPT ,O_MAGETOWER,O_GIANTCASTLE},
@@ -1201,42 +1204,42 @@ static TerrainType td[] = {
     {"swamp", R_SWAMP, TerrainType::FLYINGMOUNTS,
      200,11,10,2,I_WOOD,100,10,
      I_FLOATER,25,10,I_HERBS,100,10,
-     I_IRON,10,4,-1,0,0,
+     I_IRON,10,4,I_MUSHROOM,10,5,
      I_TRIBESMAN,I_TRIBALELF,I_LIZARDMAN,-1,I_LIZARDMAN,-1,-1,
      2,I_CROCODILE,I_BTHING,I_LMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
     {"swamp", R_SWAMP, TerrainType::FLYINGMOUNTS,
      300,11,10,2,I_WOOD,100,10,
      I_FLOATER,25,10,I_HERBS,100,10,
-     I_IRONWOOD,10,4,-1,0,0,
+     I_IRONWOOD,10,4,I_MUSHROOM,10,5,
      I_TRIBESMAN,I_TRIBALELF,I_LIZARDMAN,-1,I_LIZARDMAN,-1,-1,
      2,I_CROCODILE,I_BTHING,I_LMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
     {"swamp", R_SWAMP, TerrainType::FLYINGMOUNTS,
      200,11,10,2,I_WOOD,100,10,
      I_FLOATER,25,10,I_HERBS,100,10,
-     I_STONE,10,4,-1,0,0,
+     I_STONE,10,4,I_MUSHROOM,10,5,
      I_TRIBESMAN,I_TRIBALELF,I_OGREMAN,-1,I_VIKING,-1,-1,
      2,I_CROCODILE,I_BTHING,I_LMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
     {"jungle", R_JUNGLE, TerrainType::FLYINGMOUNTS,
      200,11,20,2,I_WOOD,100,10,
      I_HERBS,100,20,I_IRONWOOD,10,4,
-     I_YEW,10,4,-1,0,0,
+     I_YEW,10,4,I_MUSHROOM,25,5,
      I_TRIBESMAN,I_TRIBALELF,I_AMAZON,-1,I_LIZARDMAN,I_AMAZON,-1,
      6,I_ANACONDA,I_KONG,I_WMEN,
      9, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
     {"jungle", R_JUNGLE, TerrainType::FLYINGMOUNTS,
      200,11,20,2,I_WOOD,100,10,
      I_HERBS,100,20,I_FUR,10,20,
-     -1,0,0,-1,0,0,
+     I_MUSHROOM,25,5,-1,0,0,
      I_AMAZON,I_TRIBALELF,I_WOODELF,-1,I_SEAELF,I_AMAZON,-1,
      2,I_ANACONDA,I_KONG,I_WMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
     {"jungle", R_JUNGLE, TerrainType::FLYINGMOUNTS,
      200,11,20,2,I_WOOD,100,10,
      I_HERBS,100,20,I_STONE,10,4,
-     -1,0,0,-1,0,0,
+     I_MUSHROOM,25,5,-1,0,0,
      I_TRIBESMAN,I_AMAZON,I_WOODELF,-1,I_SEAELF,I_AMAZON,-1,
      2,I_ANACONDA,I_KONG,I_WMEN,
      3, O_LAIR, O_RUIN, O_CRYPT, O_BOG ,-1,-1},
@@ -1306,35 +1309,35 @@ static TerrainType td[] = {
     {"cavern", R_CAVERN, TerrainType::FLYINGMOUNTS,
      100,12,10,1,I_IRON,100,20,
      I_STONE,100,20,I_MITHRIL,25,5,
-     I_ROOTSTONE,25,5,I_MUSHROOM,10,10,
+     I_ROOTSTONE,25,5,I_ADMANTIUM,25,10,
      I_DARKMAN,I_OGREMAN,I_ORC,I_GREYELF,-1,-1,-1,
      4,I_RAT,I_DRAGON,I_GOBLIN,
      7, O_LAIR, O_RUIN, O_CAVE, O_GIANTCASTLE, O_ILAIR, O_DARKTOWER},
     {"cavern", R_CAVERN, TerrainType::FLYINGMOUNTS,
      150,13,10,1,I_IRON,100,20,
      I_STONE,100,20,I_MITHRIL,25,10,
-     I_ROOTSTONE,25,10,I_HERBS,25,10,
+     I_ROOTSTONE,25,10,I_ADMANTIUM,25,10,
      I_MINOTAUR,I_UNDERDWARF,-1,-1,-1,-1,-1,
      5,I_RAT,I_DRAGON,I_GOBLIN,
      8, O_LAIR, O_RUIN, O_CAVE, O_GIANTCASTLE, O_ILAIR, O_DARKTOWER},
     {"cavern", R_CAVERN, TerrainType::FLYINGMOUNTS,
      500,13,10,1,I_IRON,100,20,
      I_STONE,100,20,I_MITHRIL,25,5,
-     I_ROOTSTONE,25,5,I_HERBS,25,5,
+     I_ROOTSTONE,25,5,I_ADMANTIUM,25,10,
      I_DROWMAN,-1,-1,-1,-1,-1,-1,
      6,I_RAT,I_DRAGON,I_GOBLIN,
      10, O_LAIR, O_RUIN, O_CAVE, O_GIANTCASTLE, O_ILAIR, O_DARKTOWER},
     {"underforest", R_UFOREST, TerrainType::FLYINGMOUNTS,
      100,12,10,2,I_WOOD,100,10,
      I_STONE,100,10,I_IRON,100,10,
-     I_MITHRIL,5,10,I_MUSHROOM,10,5,
+     I_MITHRIL,5,10,I_MUSHROOM,20,10,
      I_DROWMAN,I_ORC,I_GREYELF,-1,-1,-1,-1,
      3,I_SPIDER,I_DRAGON,I_TROLL,
      5, O_LAIR, O_RUIN, O_CAVE, O_MAGETOWER, O_ILAIR, O_DARKTOWER},
     {"underforest", R_UFOREST, TerrainType::FLYINGMOUNTS,
      200,12,10,2,I_WOOD,100,10,
      I_STONE,100,10,I_IRON,100,10,
-     I_ROOTSTONE,5,10,I_MUSHROOM,10,5,
+     I_ROOTSTONE,5,10,I_MUSHROOM,20,10,
      I_UNDERDWARF,I_ORC,I_DROWMAN,I_GREYELF,-1,-1,-1,
      6,I_SPIDER,I_DRAGON,I_TROLL,
      10, O_LAIR, O_RUIN, O_CAVE, O_MAGETOWER, O_ILAIR, O_DARKTOWER},
