@@ -214,6 +214,7 @@ enum {
 	I_DARKMAGE,
 	I_WARRIORS,
 	I_ICEDRAGON,
+	I_HEALPOTION,
     NITEMS
 };
 
